--- a/kombinatorika.tex
+++ b/kombinatorika.tex
@@ -962,7 +962,7 @@ pagrindinis, tai mes visus juo galėsime spręsti atskirai.
     %pralaiminti, bei tarp jos ir $(x_{n},x_{n}+n)$ nėra pralaiminčių pozicijų. 
     %
     %1) Jei tarp jų atsirastų pralaiminti pozicija $(a,b)$, tai jos mažiausias
-    %elementas $x_{n}<a<x_{n+1}$, tačiau pagal $x_{k}$ apibrėžimą, jau yra
+    %elementas tenkintų nelygybę $x_{n}<a<x_{n+1}$, tačiau pagal $x_{k}$ apibrėžimą, jau yra
     %pralaiminti pora $(c,a)$<$(x_{n},x_{n}+n)$, kuri turi didesnįjį elementą $a$.
     %$b>a>c$, tad iš poros $(a,b)$ vienu ėjimu galime gauti porą $(c,a)$, tad
     %$(a,b)$ nėra pralaiminti. Prieštara.
