Elenos Dulskytės ir Edvardo Poliakovo geometrija bei Pauliaus Kantauto skteorija.

--- a/knyga.tex
+++ b/knyga.tex
@@ -4,19 +4,19 @@
 \makeindex
 \begin{document}
 \frontmatter
-\includepdf[pages=1]{./iliustracijos/kitos/virselis.pdf} %Color
+%\includepdf[pages=1]{./iliustracijos/kitos/virselis.pdf} %Color
 \include{title}
 \addtocontents{toc}{\protect\thispagestyle{empty}}
 \tableofcontents
 \enlargethispage{\baselineskip}
 \mainmatter
-\include{pratarme}
+%\include{pratarme}
 \include{skteorijaC}
 \include{algebraC}
 \include{kombinatorikaC}
 \include{geometrijaC}
 \include{sprendimaiC} 
-\include{literatura}
+%\include{literatura}
 \backmatter
 %\addcontentsline{toc}{chapter}{Index} 
 %\printindex
