--- a/title.tex
+++ b/title.tex
@@ -4,13 +4,17 @@
 \thispagestyle{empty}
 \noindent\hspace*{-\evensidemargin}\makebox[0pt][l]{
 \begin{minipage}{1\textwidth}
+  \begin{center}
+    {\huge Matematikos knygos juodraštis}
+\end{center}
   \flushleft
   \includegraphics[scale=2]{./iliustracijos/kitos/ccbysa.pdf}
   \medskip
 
   \begin{small} 
     \fussy
-    \noindent \copyright \ Copyright Paulius Kantautas, Lukas Melninkas, Pijus Simonaitis, Paulius Šarka 2010, Some Rights
+    \noindent \copyright \ Copyright Paulius Kantautas, Elena Dulskytė,
+    Edvard Poliakov 2011, Some Rights
     Reserved \\ \smallskip
     Except where otherwise noted, this work is licensed under Creative Commons
     Attribution ShareAlike 3.0.\\
